syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

import "default.proto";

enum WithdrawalState {
    WITHDRAWAL_STATE_UNKNOWN = 0;
    WITHDRAWAL_STATE_REGISTERED = 1;
    WITHDRAWAL_STATE_SENT = 2;
    WITHDRAWAL_STATE_APPROVED = 3;
}

message Withdrawal {
    UInt256 transaction_hash = 1;
    WithdrawalState state = 2;
    bytes original_transaction = 3;
    bytes original_hash = 4;
    uint64 nonce = 5;
    uint64 timestamp = 6;
}